--- a/package.json
+++ b/package.json
@@ -5,17 +5,14 @@
     "dev": "npx rolldown-vite",
     "build": "npx rolldown-vite build",
     "test": "vitest",
-    "test:run": "vitest run",
-    "postinstall": "patch-package"
+    "test:run": "vitest run"
   },
   "dependencies": {
-    "@primer/view-components": "^0.43.5"
+    "@github/memoize": "^1.1.5"
   },
   "devDependencies": {
     "@vitest/browser": "^3.2.4",
     "@vitest/ui": "^3.2.4",
-    "oxlint": "^1.6.0",
-    "patch-package": "^8.0.0",
     "playwright": "^1.54.1",
     "vitest": "^3.2.4",
     "vite": "npm:rolldown-vite@latest"
